FIX: Editor styles for image & caption alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -2287,6 +2287,10 @@ h6 {
   margin: 0 0 7.2px 0;
 }
 
+figure {
+  margin: 0 0 1em 0;
+}
+
 .bdbg-footer__section {
   padding: 1rem 0;
 }
@@ -2359,6 +2363,56 @@ html #wpadminbar {
 .widget_nav_menu .menu-item {
   display: inline-block;
   margin-right: 0.5rem;
+}
+
+.alignright {
+  float: right;
+}
+
+.alignleft {
+  float: left;
+}
+
+.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.alignright {
+  float: right;
+  margin: 0 0 1rem 1rem;
+}
+
+.alignleft {
+  float: left;
+  margin: 0 1rem 1rem 0;
+}
+
+.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a img.alignright {
+  float: right;
+  margin: 0 0 1rem 1rem;
+}
+
+a img.alignleft {
+  float: left;
+  margin: 0 1rem 1rem 0;
+}
+
+a img.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-content {
+  overflow: auto;
 }
 
 .card {
