--- a/src/sass/base/base.scss
+++ b/src/sass/base/base.scss
@@ -30,3 +30,7 @@ h3 { margin: 0 0 ($h3-fontsize / 2.5) 0; }
 h4 { margin: 0 0 ($h4-fontsize / 2.5) 0; }
 h5 { margin: 0 0 ($h5-fontsize / 2.5) 0; }
 h6 { margin: 0 0 ($h6-fontsize / 2.5) 0; }
+
+figure {
+  margin: 0 0 1em 0;
+}
